fix: fix route errors
