# cmd/server/docs/swagger.json
@@ -58,6 +58,88 @@
                 }
             }
         },
+        "/api/v1/buyers/reportPurchaseOrders/": {
+            "get": {
+                "description": "Get the orders for all buyers",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Buyers"
+                ],
+                "summary": "Get buyers orders",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.BuyerOrders"
+                            }
+                        }
+                    },
+                    "204": {
+                        "description": "No content",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Error listing buyers",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/buyers/reportPurchaseOrders/{id}": {
+            "get": {
+                "description": "Get the orders for a specific buyer",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Buyers"
+                ],
+                "summary": "Get buyer orders",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Buyer ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.BuyerOrders"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid ID",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Buyer not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Error listing buyer",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/buyers/{id}": {
             "get": {
                 "consumes": [
@@ -441,6 +523,72 @@
                 }
             }
         },
+        "/api/v1/localities": {
+            "post": {
+                "description": "Create a new locality with the provided data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Locality"
+                ],
+                "parameters": [
+                    {
+                        "description": "Locality object to be created",
+                        "name": "locality",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.Locality"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Locality created successfully",
+                        "schema": {
+                            "$ref": "#/definitions/domain.LocalityInput"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/localities/report-sellers": {
+            "get": {
+                "description": "Generates a report of sellers based on the provided locality ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Locality"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Locality ID",
+                        "name": "id",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Report of sellers by locality",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.LocalityReport"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/localities/reportCarries": {
             "get": {
                 "description": "List all Carriers of a Locality or All Localities",
@@ -521,7 +669,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.ProductRecord"
+                            "$ref": "#/definitions/domain.ProductRecordRequest"
                         }
                     }
                 ],
@@ -1302,155 +1450,6 @@
                     }
                 }
             }
-        },
-        "/buyers/reportPurchaseOrders/": {
-            "get": {
-                "description": "Get the orders for all buyers",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Buyers"
-                ],
-                "summary": "Get buyers orders",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/domain.BuyerOrders"
-                            }
-                        }
-                    },
-                    "204": {
-                        "description": "No content",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Error listing buyers",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/buyers/reportPurchaseOrders/{id}": {
-            "get": {
-                "description": "Get the orders for a specific buyer",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Buyers"
-                ],
-                "summary": "Get buyer orders",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Buyer ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/domain.BuyerOrders"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid ID",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "Buyer not found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Error listing buyer",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/locality": {
-            "post": {
-                "description": "Create a new locality with the provided data",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Locality"
-                ],
-                "parameters": [
-                    {
-                        "description": "Locality object to be created",
-                        "name": "locality",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/domain.Locality"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Locality created successfully",
-                        "schema": {
-                            "$ref": "#/definitions/domain.LocalityInput"
-                        }
-                    }
-                }
-            }
-        },
-        "/locality/report": {
-            "get": {
-                "description": "Generates a report of sellers based on the provided locality ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Locality"
-                ],
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Locality ID",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Report of sellers by locality",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/domain.LocalityReport"
-                            }
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -1634,10 +1633,10 @@
                     "type": "string"
                 },
                 "expiration_rate": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "freezing_rate": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "height": {
                     "type": "number"
@@ -1748,6 +1747,23 @@
                     "type": "integer"
                 },
                 "records_count": {
+                    "type": "integer"
+                }
+            }
+        },
+        "domain.ProductRecordRequest": {
+            "type": "object",
+            "properties": {
+                "last_update_date": {
+                    "type": "string"
+                },
+                "product_id": {
+                    "type": "integer"
+                },
+                "purchase_price": {
+                    "type": "integer"
+                },
+                "sale_price": {
                     "type": "integer"
                 }
             }
