# cmd/server/handler/locality.go
@@ -29,7 +29,7 @@ func NewLocality(l locality.Service) *LocalityController {
 // @Produce json
 // @Param locality body domain.Locality true "Locality object to be created"
 // @Success 201 {object} domain.LocalityInput "Locality created successfully"
-// @Router /locality [post]
+// @Router /api/v1/localities [post]
 func (l *LocalityController) Create() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		domain := &domain.Locality{}
@@ -66,9 +66,9 @@ func (l *LocalityController) Create() gin.HandlerFunc {
 // @Tags Locality
 // @Accept json
 // @Produce json
-// @Param id query integer true "Locality ID"
 // @Success 200 {array} domain.LocalityReport "Report of sellers by locality"
-// @Router /locality/report [get]
+// @Router /api/v1/localities/report-sellers [get]
+// @Param id query int false "Locality ID"
 func (l *LocalityController) ReportSellersByLocality() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		localityIdStr := c.Query("id")
